updating about page

--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -16,6 +16,7 @@
         {{>header}}
         <p>this is me Zoro</p>
         <img src="/img/zoro.png" alt="Roronoa Zoro" class="portrait">
+        <p>This page was created by Raktim Thapa. Just a computer engineering student</p>
     </div>
     {{>footer}}
 </body>
